// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic FHIR Integration Test should handle empty or small result sets gracefully 1`] = `
{
  "addresses": [],
  "allergyIntolerances": [],
  "allergyManifestations": [],
  "allergyReactions": [],
  "appointmentParticipants": [],
  "appointments": [],
  "attachments": [],
  "bundleEntries": [],
  "bundles": [
    {
      "createdAt": 2025-08-04T15:45:29.821Z,
      "id": "36160a4b-8f13-4e3a-a23e-ea85113817ef",
      "resourceId": "2fbd871b-bd6c-46c8-b611-901b5d5d104b",
      "timestamp": undefined,
      "total": 0,
      "type": "searchset",
    },
  ],
  "carePlanActivities": [],
  "carePlans": [],
  "careTeamParticipants": [],
  "careTeams": [],
  "codeableConcepts": [],
  "codings": [],
  "conditions": [],
  "diagnosticReportResults": [],
  "diagnosticReports": [],
  "encounterParticipants": [],
  "encounters": [],
  "immunizations": [],
  "locations": [],
  "medicationDosages": [],
  "medicationRequests": [],
  "notes": [],
  "observationComponents": [],
  "observations": [],
  "organizationTypes": [],
  "organizations": [],
  "patientContacts": [],
  "patientIdentifiers": [],
  "patientNames": [],
  "patients": [],
  "practitionerQualifications": [],
  "practitioners": [],
  "procedurePerformers": [],
  "procedures": [],
  "references": [],
  "telecoms": [],
}
`;

exports[`Basic FHIR Integration Test should successfully fetch and normalize patient data from HAPI FHIR server 1`] = `
{
  "addresses": [],
  "allergyIntolerances": [],
  "allergyManifestations": [],
  "allergyReactions": [],
  "appointmentParticipants": [],
  "appointments": [],
  "attachments": [],
  "bundleEntries": [
    {
      "bundleId": "bc8ba102-f417-4af4-8837-8ea29c7b56e4",
      "createdAt": 2025-08-04T15:45:28.837Z,
      "fullUrl": "https://hapi.fhir.org/baseR4/Patient/44821623",
      "id": "3fadb2b0-4f6d-4cf3-80f9-9a8ff02bc3fd",
      "resourceId": "44821623",
      "resourceType": "Patient",
      "searchMode": "match",
      "searchScore": undefined,
    },
    {
      "bundleId": "bc8ba102-f417-4af4-8837-8ea29c7b56e4",
      "createdAt": 2025-08-04T15:45:28.837Z,
      "fullUrl": "https://hapi.fhir.org/baseR4/Patient/10971143",
      "id": "bb64a468-b3f3-4f8f-a756-ac8cd0ffd253",
      "resourceId": "10971143",
      "resourceType": "Patient",
      "searchMode": "match",
      "searchScore": undefined,
    },
    {
      "bundleId": "bc8ba102-f417-4af4-8837-8ea29c7b56e4",
      "createdAt": 2025-08-04T15:45:28.837Z,
      "fullUrl": "https://hapi.fhir.org/baseR4/Patient/10971146",
      "id": "68f996fb-ba73-45bb-bf84-658725354bd7",
      "resourceId": "10971146",
      "resourceType": "Patient",
      "searchMode": "match",
      "searchScore": undefined,
    },
  ],
  "bundles": [
    {
      "createdAt": 2025-08-04T15:45:28.837Z,
      "id": "bc8ba102-f417-4af4-8837-8ea29c7b56e4",
      "resourceId": "f3a91003-0dc8-43b9-a61b-0662261c516f",
      "timestamp": undefined,
      "total": undefined,
      "type": "searchset",
    },
  ],
  "carePlanActivities": [],
  "carePlans": [],
  "careTeamParticipants": [],
  "careTeams": [],
  "codeableConcepts": [],
  "codings": [],
  "conditions": [],
  "diagnosticReportResults": [],
  "diagnosticReports": [],
  "encounterParticipants": [],
  "encounters": [],
  "immunizations": [],
  "locations": [],
  "medicationDosages": [],
  "medicationRequests": [],
  "notes": [],
  "observationComponents": [],
  "observations": [],
  "organizationTypes": [],
  "organizations": [],
  "patientContacts": [],
  "patientIdentifiers": [],
  "patientNames": [
    {
      "createdAt": 2025-08-04T15:45:28.837Z,
      "family": "Doe",
      "given": "John",
      "id": "cf6f75ef-048c-459c-b6c5-aab938fa557e",
      "patientId": "88cc98d1-30c3-4425-a0cd-7d4efa60cd3c",
      "periodEnd": undefined,
      "periodStart": undefined,
      "prefix": undefined,
      "suffix": undefined,
      "text": undefined,
      "use": "official",
    },
    {
      "createdAt": 2025-08-04T15:45:28.837Z,
      "family": undefined,
      "given": undefined,
      "id": "f064a035-c005-485d-8dd8-ecbd7bbda139",
      "patientId": "c94d94cd-074d-4b90-8380-3291ea418124",
      "periodEnd": undefined,
      "periodStart": undefined,
      "prefix": undefined,
      "suffix": undefined,
      "text": "Ash",
      "use": undefined,
    },
    {
      "createdAt": 2025-08-04T15:45:28.837Z,
      "family": undefined,
      "given": undefined,
      "id": "2b8063b4-48f4-456d-a612-4fa801467b7b",
      "patientId": "d0e53f46-7b40-47ce-8917-cef1d9d8db8d",
      "periodEnd": undefined,
      "periodStart": undefined,
      "prefix": undefined,
      "suffix": undefined,
      "text": "Ash",
      "use": undefined,
    },
  ],
  "patients": [
    {
      "active": undefined,
      "birthDate": "1980-01-01",
      "createdAt": 2025-08-04T15:45:28.837Z,
      "deceased": undefined,
      "deceasedDateTime": undefined,
      "gender": "male",
      "id": "88cc98d1-30c3-4425-a0cd-7d4efa60cd3c",
      "managingOrganizationId": undefined,
      "maritalStatus": undefined,
      "multipleBirth": undefined,
      "multipleBirthInteger": undefined,
      "resourceId": "44821623",
      "updatedAt": 2025-08-04T15:45:28.837Z,
    },
    {
      "active": undefined,
      "birthDate": undefined,
      "createdAt": 2025-08-04T15:45:28.837Z,
      "deceased": undefined,
      "deceasedDateTime": undefined,
      "gender": undefined,
      "id": "c94d94cd-074d-4b90-8380-3291ea418124",
      "managingOrganizationId": undefined,
      "maritalStatus": undefined,
      "multipleBirth": undefined,
      "multipleBirthInteger": undefined,
      "resourceId": "10971143",
      "updatedAt": 2025-08-04T15:45:28.837Z,
    },
    {
      "active": undefined,
      "birthDate": undefined,
      "createdAt": 2025-08-04T15:45:28.837Z,
      "deceased": undefined,
      "deceasedDateTime": undefined,
      "gender": undefined,
      "id": "d0e53f46-7b40-47ce-8917-cef1d9d8db8d",
      "managingOrganizationId": undefined,
      "maritalStatus": undefined,
      "multipleBirth": undefined,
      "multipleBirthInteger": undefined,
      "resourceId": "10971146",
      "updatedAt": 2025-08-04T15:45:28.837Z,
    },
  ],
  "practitionerQualifications": [],
  "practitioners": [],
  "procedurePerformers": [],
  "procedures": [],
  "references": [],
  "telecoms": [],
}
`;

exports[`Basic FHIR Integration Test should validate library exports are working correctly 1`] = `
{
  "addresses": [],
  "allergyIntolerances": [],
  "allergyManifestations": [],
  "allergyReactions": [],
  "appointmentParticipants": [],
  "appointments": [],
  "attachments": [],
  "bundleEntries": [],
  "bundles": [
    {
      "createdAt": 2025-08-04T15:45:29.823Z,
      "id": "338c9bba-36fc-436a-84cf-e1fd88e21407",
      "resourceId": undefined,
      "timestamp": undefined,
      "total": undefined,
      "type": "searchset",
    },
  ],
  "carePlanActivities": [],
  "carePlans": [],
  "careTeamParticipants": [],
  "careTeams": [],
  "codeableConcepts": [],
  "codings": [],
  "conditions": [],
  "diagnosticReportResults": [],
  "diagnosticReports": [],
  "encounterParticipants": [],
  "encounters": [],
  "immunizations": [],
  "locations": [],
  "medicationDosages": [],
  "medicationRequests": [],
  "notes": [],
  "observationComponents": [],
  "observations": [],
  "organizationTypes": [],
  "organizations": [],
  "patientContacts": [],
  "patientIdentifiers": [],
  "patientNames": [],
  "patients": [],
  "practitionerQualifications": [],
  "practitioners": [],
  "procedurePerformers": [],
  "procedures": [],
  "references": [],
  "telecoms": [],
}
`;
